# leLab

./: .gitignore  README.md  generate_certs.py  pyproject.toml
app/: __init__.py  calibrating.py  camera_detection.py  config.py  main.py  recording.py  replaying.py  teleoperating.py  training.py  video.py  webrtc_signaling.py
app/static/: index.html
frontend/: .gitignore  README.md  bun.lockb  index.html  package.json  vite.config.ts
frontend/src/: App.tsx
frontend/src/components/: UrdfProcessorInitializer.tsx  UrdfViewer.tsx
frontend/src/components/control/: CommandBar.tsx  MetricsPanel.tsx  RobotArm.tsx  VisualizerPanel.tsx
frontend/src/components/test/: WebSocketTest.tsx
frontend/src/contexts/: DragAndDropContext.tsx  UrdfContext.tsx
frontend/src/hooks/: useDefaultRobotData.ts  useDragAndDrop.tsx  useRealTimeJoints.ts  useTheme.tsx  useUrdf.ts
frontend/src/lib/: UrdfDragAndDrop.ts  meshLoaders.ts  mockData.ts  types.ts  urdfAnimationHelpers.ts  urdfViewerHelpers.ts
frontend/src/pages/: Calibration.tsx  Index.tsx  Landing.tsx  Recording.tsx  Replay.tsx  Teleoperation.tsx  Training.tsx
scripts/: __init__.py  backend.py  frontend.py  fullstack.py  start_phone_camera_demo.py  webrtc_backend.py
